Update on Intro to PyTorch and CNNs

--- a/intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
+++ b/intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,23 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2],\n",
-      "        [2]])\n"
+      "tensor([[9],\n",
+      "        [9],\n",
+      "        [9],\n",
+      "        [4],\n",
+      "        [4],\n",
+      "        [4],\n",
+      "        [4],\n",
+      "        [4],\n",
+      "        [9],\n",
+      "        [9]])\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 9.375%\n"
+      "Accuracy: 4.6875%\n"
      ]
     }
    ],
@@ -213,43 +213,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 68.75%\n",
-      "Accuracy: 75.0%\n",
-      "Accuracy: 75.0%\n",
-      "Accuracy: 75.0%\n",
-      "Accuracy: 87.5%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 87.5%\n",
-      "Accuracy: 75.0%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 81.25%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 75.0%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 87.5%\n",
-      "Accuracy: 81.25%\n",
-      "Accuracy: 100.0%\n",
-      "Accuracy: 100.0%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 93.75%\n",
-      "Accuracy: 100.0%\n",
-      "Accuracy: 87.5%\n",
-      "Accuracy: 87.5%\n",
-      "Accuracy: 100.0%\n",
-      "Accuracy: 87.5%\n"
+      "Accuracy: 83.71815286624204%\n",
+      "Accuracy: 85.35031847133757%\n",
+      "Accuracy: 84.93232484076434%\n",
+      "Accuracy: 86.75358280254777%\n",
+      "Accuracy: 87.19148089171975%\n",
+      "Accuracy: 87.22133757961784%\n",
+      "Accuracy: 87.59952229299363%\n",
+      "Accuracy: 87.50995222929936%\n",
+      "Accuracy: 86.94267515923566%\n",
+      "Accuracy: 86.9327229299363%\n",
+      "Accuracy: 86.71377388535032%\n"
      ]
     }
    ],
@@ -276,6 +257,7 @@
     "        running_loss += loss.item()\n",
     "        \n",
     "    else:\n",
+    "        accuracy = 0\n",
     "        with torch.no_grad():\n",
     "            for images, labels in testloader:\n",
     "                log_ps = model(images)\n",
@@ -283,9 +265,9 @@
     "                \n",
     "                _, top_classes = ps.topk(1, dim=1)\n",
     "                equals = top_classes == labels.view(*top_classes.shape)\n",
-    "                accuracy = torch.mean(equals.type(torch.FloatTensor))\n",
+    "                accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
     "        ## TODO: Implement the validation pass and print out the validation accuracy\n",
-    "        print(f'Accuracy: {accuracy.item()*100}%')"
+    "        print(f'Accuracy: {accuracy.item()*100/len(testloader)}%')"
    ]
   },
   {
