--- a/intro-to-pytorch/Part 8 - Transfer Learning (Exercises).ipynb
+++ b/intro-to-pytorch/Part 8 - Transfer Learning (Exercises).ipynb
@@ -186,7 +186,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO: Use a pretrained model to classify the cat and dog images"
+    "## TODO: Use a pretrained model to classify the cat and dog images\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "\n",
+    "epochs = 1\n",
+    "criterion = nn.NLLLoss()\n",
+    "optimizer = optim.Adam(model.classifier.parameters())\n",
+    "\n",
+    "train_losses, test_losses = [], []\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    running_loss = 0\n",
+    "\n",
+    "    for image, label in trainloader:\n",
+    "        image, label = image.to(device), label.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        logits = model.forward(image)\n",
+    "        loss = criterion(logits, label)\n",
+    "        \n",
+    "        running_loss += loss.item()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    model.eval()    \n",
+    "    with torch.no_grad():\n",
+    "        accuracy = 0\n",
+    "        test_loss = 0\n",
+    "\n",
+    "        for image, label in testloader:\n",
+    "            image, label = image.to(device), label.to(device)\n",
+    "            \n",
+    "            logits = model.forward(image)\n",
+    "            loss = criterion(logits, label)\n",
+    "            test_loss += loss.item()\n",
+    "            \n",
+    "            ps = torch.exp(logits)\n",
+    "            _, top_class = ps.topk(1, dim=1)\n",
+    "            equals = top_class == label.view(*top_class.shape)\n",
+    "            accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
+    "    \n",
+    "    train_losses.append(running_loss/len(train_data))\n",
+    "    test_losses.append(test_loss / len(test_data))\n",
+    "    model.train()\n",
+    "    print( \"Training Loss: {:.3f}.. \".format(running_loss/len(trainloader)),\n",
+    "          \"Test Loss: {:.3f}.. \".format(test_loss/len(testloader)),\n",
+    "          \"Test Accuracy: {:.3f}\".format(accuracy/len(testloader)))"
    ]
   }
  ],
@@ -206,7 +252,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
