Update CNN, autoencoder, weight init, and transfer learning

--- a/transfer-learning/Transfer_Learning_Exercise.ipynb
+++ b/transfer-learning/Transfer_Learning_Exercise.ipynb
@@ -37,10 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -56,11 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is not available.  Training on CPU ...\n"
+     ]
+    }
+   ],
    "source": [
     "# check if CUDA is available\n",
     "train_on_gpu = torch.cuda.is_available()\n",
@@ -93,10 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define training and test data directories\n",
@@ -119,10 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load and transform data using ImageFolder\n",
@@ -148,10 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define dataloader parameters\n",
@@ -269,9 +267,10 @@
    },
    "outputs": [],
    "source": [
-    "import torch.nn as nn## TODO: add a last linear layer  that maps n_inputs -> 5 flower classes\n",
+    "from torch import nn\n",
+    "## TODO: add a last linear layer  that maps n_inputs -> 5 flower classes\n",
     "## new layers automatically have requires_grad = True\n",
-    "\n",
+    "vgg16.classifier[6] = nn.Linear(4096, 5)\n",
     "\n",
     "\n",
     "\n",
@@ -336,6 +335,39 @@
     "## These loops should update the classifier-weights of this model\n",
     "## And track (and print out) the training loss over time\n",
     "\n",
+    "for epoch in range(n_epochs):\n",
+    "    \n",
+    "    vgg16.train()\n",
+    "    test_loss = 0\n",
+    "    training_loss = 0\n",
+    "    \n",
+    "    for image, label in train_loader:\n",
+    "        if train_on_gpu:\n",
+    "            image, label = image.cuda(), label.cuda()\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        output = vgg16.forward(image)\n",
+    "        loss = criterion(output, label)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        training_loss += loss.item()\n",
+    "\n",
+    "    vgg16.eval()\n",
+    "    with torch.no_grad():\n",
+    "        for image, label in test_loader:\n",
+    "            if train_on_gpu:\n",
+    "                image, label = image.cuda(), label.cuda()\n",
+    "            output = vgg16.forward(image)\n",
+    "            loss = criterion(output, label)\n",
+    "#             probabilites = torch.exp(output)\n",
+    "#             _, top_class = probabilites.topk(1, dim=1)\n",
+    "#             equals = top_class.cuda() == labels.view(*top_class.shape)\n",
+    "#             accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
+    "            test_loss += loss.item()\n",
+    "    \n",
+    "    print(f\"Epoch {epoch+1} of {n_epochs} \"\n",
+    "          f\"Training loss: {training_loss/len(train_loader)}\",\n",
+    "          f\"Test loss: {test_loss/len(test_loader)}\")\n",
     "\n"
    ]
   },
@@ -448,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -462,7 +494,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   },
   "widgets": {
    "state": {},
