--- a/autoencoder/convolutional-autoencoder/Convolutional_Autoencoder_Exercise.ipynb
+++ b/autoencoder/convolutional-autoencoder/Convolutional_Autoencoder_Exercise.ipynb
@@ -132,25 +132,30 @@
    },
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "# define the NN architecture\n",
     "class ConvAutoencoder(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(ConvAutoencoder, self).__init__()\n",
     "        ## encoder layers ##\n",
-    "        \n",
-    "        \n",
+    "        self.conv1 = nn.Conv2d(1, 16, 2, padding=1)\n",
+    "        self.max_pool = nn.MaxPool2d(2,2)\n",
+    "        self.conv2 = nn.Conv2d(16, 4, 2, padding=1)\n",
+    "\n",
     "        ## decoder layers ##\n",
     "        ## a kernel of 2 and a stride of 2 will increase the spatial dims by 2\n",
     "        self.t_conv1 = nn.ConvTranspose2d(4, 16, 2, stride=2)\n",
+    "        self.t_conv2 = nn.ConvTranspose2d(16, 1, 2, stride=2)\n",
     "\n",
     "\n",
     "    def forward(self, x):\n",
     "        ## encode ##\n",
-    "        \n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = self.max_pool(x)\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = self.max_pool(x)\n",
     "        ## decode ##\n",
+    "        x = F.relu(self.t_conv1(x))\n",
+    "        x = F.sigmoid(self.t_conv2(x))\n",
     "        ## apply ReLu to all hidden layers *except for the output layer\n",
     "        ## apply a sigmoid to the output layer\n",
     "        \n",
@@ -282,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +301,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
