--- a/autoencoder/linear-autoencoder/Simple_Autoencoder_Exercise.ipynb
+++ b/autoencoder/linear-autoencoder/Simple_Autoencoder_Exercise.ipynb
@@ -130,15 +130,17 @@
     "    def __init__(self, encoding_dim):\n",
     "        super(Autoencoder, self).__init__()\n",
     "        ## encoder ##\n",
-    "        \n",
+    "        self.fc1 = nn.Linear(784, encoding_dim)\n",
     "        ## decoder ##\n",
-    "        \n",
+    "        self.fc2 = nn.Linear(encoding_dim, 784)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # define feedforward behavior \n",
     "        # and scale the *output* layer with a sigmoid activation function\n",
+    "        encode = F.relu(self.fc1(x))\n",
+    "        decode = F.sigmoid(self.fc2(encode))\n",
     "        \n",
-    "        return x\n",
+    "        return decode\n",
     "\n",
     "# initialize the NN\n",
     "encoding_dim = 32\n",
@@ -279,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +295,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
