--- a/weight-initialization/weight_initialization_exercise.ipynb
+++ b/weight-initialization/weight_initialization_exercise.ipynb
@@ -40,56 +40,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "from torchvision import datasets\n",
-    "import torchvision.transforms as transforms\n",
-    "from torch.utils.data.sampler import SubsetRandomSampler\n",
+    "# import torch\n",
+    "# import numpy as np\n",
+    "# from torchvision import datasets\n",
+    "# import torchvision.transforms as transforms\n",
+    "# from torch.utils.data.sampler import SubsetRandomSampler\n",
     "\n",
-    "# number of subprocesses to use for data loading\n",
-    "num_workers = 0\n",
-    "# how many samples per batch to load\n",
-    "batch_size = 100\n",
-    "# percentage of training set to use as validation\n",
-    "valid_size = 0.2\n",
+    "# # number of subprocesses to use for data loading\n",
+    "# num_workers = 0\n",
+    "# # how many samples per batch to load\n",
+    "# batch_size = 100\n",
+    "# # percentage of training set to use as validation\n",
+    "# valid_size = 0.2\n",
     "\n",
-    "# convert data to torch.FloatTensor\n",
-    "transform = transforms.ToTensor()\n",
+    "# # convert data to torch.FloatTensor\n",
+    "# transform = transforms.ToTensor()\n",
     "\n",
-    "# choose the training and test datasets\n",
-    "train_data = datasets.FashionMNIST(root='data', train=True,\n",
-    "                                   download=True, transform=transform)\n",
-    "test_data = datasets.FashionMNIST(root='data', train=False,\n",
-    "                                  download=True, transform=transform)\n",
+    "# # choose the training and test datasets\n",
+    "# train_data = datasets.FashionMNIST(root='data', train=True,\n",
+    "#                                    download=True, transform=transform)\n",
+    "# test_data = datasets.FashionMNIST(root='data', train=False,\n",
+    "#                                   download=True, transform=transform)\n",
     "\n",
-    "# obtain training indices that will be used for validation\n",
-    "num_train = len(train_data)\n",
-    "indices = list(range(num_train))\n",
-    "np.random.shuffle(indices)\n",
-    "split = int(np.floor(valid_size * num_train))\n",
-    "train_idx, valid_idx = indices[split:], indices[:split]\n",
+    "# # obtain training indices that will be used for validation\n",
+    "# num_train = len(train_data)\n",
+    "# indices = list(range(num_train))\n",
+    "# np.random.shuffle(indices)\n",
+    "# split = int(np.floor(valid_size * num_train))\n",
+    "# train_idx, valid_idx = indices[split:], indices[:split]\n",
     "\n",
-    "# define samplers for obtaining training and validation batches\n",
-    "train_sampler = SubsetRandomSampler(train_idx)\n",
-    "valid_sampler = SubsetRandomSampler(valid_idx)\n",
+    "# # define samplers for obtaining training and validation batches\n",
+    "# train_sampler = SubsetRandomSampler(train_idx)\n",
+    "# valid_sampler = SubsetRandomSampler(valid_idx)\n",
     "\n",
-    "# prepare data loaders (combine dataset and sampler)\n",
-    "train_loader = torch.utils.data.DataLoader(train_data, batch_size=batch_size,\n",
-    "    sampler=train_sampler, num_workers=num_workers)\n",
-    "valid_loader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, \n",
-    "    sampler=valid_sampler, num_workers=num_workers)\n",
-    "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, \n",
-    "    num_workers=num_workers)\n",
+    "# # prepare data loaders (combine dataset and sampler)\n",
+    "# train_loader = torch.utils.data.DataLoader(train_data, batch_size=batch_size,\n",
+    "#     sampler=train_sampler, num_workers=num_workers)\n",
+    "# valid_loader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, \n",
+    "#     sampler=valid_sampler, num_workers=num_workers)\n",
+    "# test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, \n",
+    "#     num_workers=num_workers)\n",
     "\n",
-    "# specify the image classes\n",
-    "classes = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', \n",
-    "    'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']"
+    "# # specify the image classes\n",
+    "# classes = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', \n",
+    "#     'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']"
    ]
   },
   {
@@ -102,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -173,9 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -234,9 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# initialize two NN's with 0 and 1 constant weights\n",
@@ -247,9 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import helpers\n",
@@ -301,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "helpers.hist_dist('Random Uniform (low=-3, high=3)', np.random.uniform(-3, 3, [1000]))"
@@ -330,9 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# takes in a module and applies the specified weight initialization\n",
@@ -348,9 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create a new model with these weights\n",
@@ -361,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# evaluate behavior \n",
@@ -391,9 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# takes in a module and applies the specified weight initialization\n",
@@ -422,9 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# takes in a module and applies the specified weight initialization\n",
@@ -446,9 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compare these two models\n",
@@ -487,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "helpers.hist_dist('Random Normal (mean=0.0, stddev=1.0)', np.random.normal(size=[1000]))"
@@ -509,9 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## complete this function\n",
@@ -520,18 +492,24 @@
     "       values taken from a normal distribution.'''\n",
     "    \n",
     "    classname = m.__class__.__name__\n",
-    "    # for every Linear layer in a model\n",
-    "    # m.weight.data shoud be taken from a normal distribution\n",
-    "    # m.bias.data should be 0\n",
+    "    if classname == \"Linear\":\n",
+    "        n = m.in_features\n",
+    "        o = m.out_features\n",
+    "        y = 1.0/np.sqrt(n)\n",
+    "        print(m.weight.data.shape)\n",
+    "        weights = torch.from_numpy(np.random.normal(loc=0, scale=y, size=(o, n)))\n",
+    "        m.weight.data = weights.type(torch.FloatTensor)\n",
+    "        m.bias.data.fill_(0)\n",
+    "        # for every Linear layer in a model\n",
+    "        # m.weight.data shoud be taken from a normal distribution\n",
+    "        # m.bias.data should be 0\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## -- no need to change code below this line -- ##\n",
@@ -548,9 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# compare the two models\n",
@@ -585,24 +561,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "## Instantiate a model with _no_ explicit weight initialization \n"
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# define the NN architecture\n",
+    "class Net2(nn.Module):\n",
+    "    def __init__(self, hidden_1=256, hidden_2=128, constant_weight=None):\n",
+    "        super(Net2, self).__init__()\n",
+    "        # linear layer (784 -> hidden_1)\n",
+    "        self.fc1 = nn.Linear(28 * 28, hidden_1)\n",
+    "        # linear layer (hidden_1 -> hidden_2)\n",
+    "        self.fc2 = nn.Linear(hidden_1, hidden_2)\n",
+    "        # linear layer (hidden_2 -> 10)\n",
+    "        self.fc3 = nn.Linear(hidden_2, 10)\n",
+    "        # dropout layer (p=0.2)\n",
+    "        self.dropout = nn.Dropout(0.2)\n",
+    "\n",
+    "            \n",
+    "    def forward(self, x):\n",
+    "        # flatten image input\n",
+    "        x = x.view(-1, 28 * 28)\n",
+    "        # add hidden layer, with relu activation function\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        # add dropout layer\n",
+    "        x = self.dropout(x)\n",
+    "        # add hidden layer, with relu activation function\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        # add dropout layer\n",
+    "        x = self.dropout(x)\n",
+    "        # add output layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "## evaluate the behavior using helpers.compare_init_weights\n",
-    "\n"
+    "## Instantiate a model with _no_ explicit weight initialization \n",
+    "# compare the two models\n",
+    "model_list = [(Net2(), \"Not initialization\"), (model_normal_rule, 'Normal Distribution')]\n",
+    "\n",
+    "# evaluate behavior \n",
+    "helpers.compare_init_weights(model_list, \n",
+    "                             'No special weight initialization vs normal distribution', \n",
+    "                             train_loader,\n",
+    "                             valid_loader)"
    ]
   },
   {
@@ -613,12 +623,19 @@
     "* What initializaion strategy has the lowest training loss after two epochs? What about highest validation accuracy?\n",
     "* After testing all these initial weight options, which would you decide to use in a final classification model?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -632,7 +649,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
