--- a/convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
+++ b/convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
@@ -24,11 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is not available.  Training on CPU ...\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -54,10 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from torchvision import datasets\n",
@@ -228,22 +232,38 @@
    },
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "# define the CNN architecture\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        # convolutional layer\n",
-    "        self.conv1 = nn.Conv2d(3, 16, 3, padding=1)\n",
-    "        # max pooling layer\n",
+    "        self.conv = nn.Conv2d(3, 32, 3, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(32, 32, 3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(64, 64, 3)\n",
+    "\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout = nn.Dropout(0.25)\n",
+    "        \n",
+    "        self.linear = nn.Linear(64*7*7, 512)\n",
+    "        self.linear2 = nn.Linear(512, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # add sequence of convolutional and max pooling layers\n",
-    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = F.relu(self.conv(x))\n",
+    "        \n",
+    "        x = self.dropout(self.pool(F.relu(self.conv1(x))))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = self.dropout(self.pool(F.relu(self.conv3(x))))\n",
+    "        x = x.view(x.shape[0], -1)\n",
+    "        x = self.dropout(F.relu(self.linear(x)))\n",
+    "        \n",
+    "        x = self.linear2(x)\n",
+    "        x = F.log_softmax(x, dim=1)\n",
     "        return x\n",
+    "\n",
+    "    \n",
+    "    \n",
     "\n",
     "# create a complete CNN\n",
     "model = Net()\n",
@@ -276,10 +296,10 @@
     "import torch.optim as optim\n",
     "\n",
     "# specify loss function\n",
-    "criterion = None\n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "# specify optimizer\n",
-    "optimizer = None"
+    "optimizer = optim.Adam(model.parameters())"
    ]
   },
   {
@@ -341,7 +361,7 @@
     "        if train_on_gpu:\n",
     "            data, target = data.cuda(), target.cuda()\n",
     "        # forward pass: compute predicted outputs by passing inputs to the model\n",
-    "        output = model(data)\n",
+    "        output = model.forward(data)\n",
     "        # calculate the batch loss\n",
     "        loss = criterion(output, target)\n",
     "        # update average validation loss \n",
@@ -511,9 +531,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:cvnd_1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cvnd_1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -525,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
