--- a/autoencoder/denoising-autoencoder/Denoising_Autoencoder_Exercise.ipynb
+++ b/autoencoder/denoising-autoencoder/Denoising_Autoencoder_Exercise.ipynb
@@ -105,24 +105,40 @@
    },
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "# define the NN architecture\n",
     "class ConvDenoiser(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(ConvDenoiser, self).__init__()\n",
     "        ## encoder layers ##\n",
-    "        \n",
+    "        self.conv1 = nn.Conv2d(1, 32, 3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(32, 16, 3, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(16, 8, 3, padding=1)\n",
+    "        self.conv4 = nn.Conv2d(8, 4, 3, padding=1)\n",
+    "\n",
     "        ## decoder layers ##\n",
     "        ## a kernel of 2 and a stride of 2 will increase the spatial dims by 2\n",
-    "\n",
+    "        self.t_conv1 = nn.Conv2d(4, 8, 3, stride=1, padding=1)\n",
+    "        self.t_conv2 = nn.Conv2d(8, 16, 3, stride=1, padding=1)\n",
+    "        self.t_conv3 = nn.Conv2d(16, 1, 3, stride=1, padding=1)\n",
+    "        \n",
+    "        self.pool = nn.MaxPool2d(2,2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        ## encode ##\n",
-    "        \n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = self.pool(x)\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = self.pool(x)\n",
+    "        x = F.relu(self.conv3(x))\n",
+    "        x = F.relu(self.conv4(x))\n",
+    "\n",
     "        ## decode ##\n",
-    "                \n",
+    "        x = F.upsample(x, scale_factor=2, mode='nearest')\n",
+    "        x = F.relu(self.t_conv1(x))\n",
+    "        x = F.upsample(x, scale_factor=2, mode='bilinear')\n",
+    "\n",
+    "        x = F.relu(self.t_conv2(x))\n",
+    "        x = F.sigmoid(self.t_conv3(x))        \n",
     "        return x\n",
     "\n",
     "# initialize the NN\n",
@@ -287,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
